--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     networks:
       - streaming-net
     command: ["java", "-jar", "/app/DAI-LAB-03-1.0-SNAPSHOT.jar", "Server"]
+    stdin_open: true
+    tty: true  # Activer un terminal interactif
 
   client:
     build: .
@@ -20,6 +22,8 @@ services:
     networks:
       - streaming-net
     command: ["java", "-jar", "/app/DAI-LAB-03-1.0-SNAPSHOT.jar", "Client", "--host", "server", "--port", "1986"]
+    stdin_open: true
+    tty: true  # Activer un terminal interactif
 
 networks:
   streaming-net:
