--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,20 +12,21 @@ services:
       - streaming-net
     command: ["java", "-jar", "/app/DAI-LAB-03-1.0-SNAPSHOT.jar", "Server"]
     stdin_open: true
-    tty: true  # Activer un terminal interactif
+    tty: true
 
   client:
     build: .
     container_name: streaming-client
+    volumes:
+      - ./client_data:/app/client_data  # Ajout du volume pour le client
     depends_on:
       - server
     networks:
       - streaming-net
     command: ["java", "-jar", "/app/DAI-LAB-03-1.0-SNAPSHOT.jar", "Client", "--host", "server", "--port", "1986"]
     stdin_open: true
-    tty: true  # Activer un terminal interactif
+    tty: true
 
 networks:
   streaming-net:
     driver: bridge
-
