--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,26 +7,25 @@ services:
     ports:
       - "1986:1986"
     volumes:
-      - ./videos:/app/videos
+      - ./server_data:/app/videos
     networks:
       - streaming-net
     command: ["java", "-jar", "/app/DAI-LAB-03-1.0-SNAPSHOT.jar", "Server"]
     stdin_open: true
-    tty: true
+    tty: true  # Activer un terminal interactif
 
   client:
     build: .
     container_name: streaming-client
-    volumes:
-      - ./client_data:/app/client_data  # Ajout du volume pour le client
     depends_on:
       - server
     networks:
       - streaming-net
     command: ["java", "-jar", "/app/DAI-LAB-03-1.0-SNAPSHOT.jar", "Client", "--host", "server", "--port", "1986"]
     stdin_open: true
-    tty: true
+    tty: true  # Activer un terminal interactif
 
 networks:
   streaming-net:
     driver: bridge
+
