--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,30 @@
-version: "3.8"
-
 services:
   server:
-    build: .
+    image: ghcr.io/asddcs/dai-lab-03:latest
     container_name: streaming-server
     ports:
       - "1986:1986"
     volumes:
-      - ./server_data:/app/videos
+      - ./videos:/app/videos
+      - ./server_data:/app/server_data
     networks:
       - streaming-net
-    command: ["java", "-jar", "/app/DAI-LAB-03-1.0-SNAPSHOT.jar", "Server"]
+    command: Server
     stdin_open: true
-    tty: true  # Activer un terminal interactif
-
+    tty: true
   client:
-    build: .
+    image: ghcr.io/asddcs/dai-lab-03:latest
     container_name: streaming-client
+    volumes:
+      - ./client_data:/app/client_data
     depends_on:
       - server
     networks:
       - streaming-net
-    command: ["java", "-jar", "/app/DAI-LAB-03-1.0-SNAPSHOT.jar", "Client", "--host", "server", "--port", "1986"]
+    command: Client
     stdin_open: true
-    tty: true  # Activer un terminal interactif
+    tty: true
 
 networks:
   streaming-net:
     driver: bridge
-
