--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   server:
-    image: ghcr.io/asddcs/dai-lab-03:latest
+    image: ghcr.io/HEIG-VD-S3-PW/dai-lab-03:latest
     container_name: streaming-server
     ports:
       - "1986:1986"
@@ -13,7 +13,7 @@ services:
     stdin_open: true
     tty: true
   client:
-    image: ghcr.io/asddcs/dai-lab-03:latest
+    image: ghcr.io/HEIG-VD-S3-PW/dai-lab-03:latest
     container_name: streaming-client
     volumes:
       - ./client_data:/app/client_data
